[project]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix signal analysis"
authors = [
    {name = "Artem Sokolov",email = "arsokolo@1-E-11.42heilbronn.de"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
